<?xml version="1.0"?>
<package>
  <name>agribot_local_planner</name>
  <version>0.0.0</version>
  <description>The agribot_local_planner package</description>

  <maintainer email="Alireza.Ahmadi@uni-bonn.de">Alireza Ahmadi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>base_local_planner</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>base_local_planner</run_depend>

  <export>
      <nav_core plugin="${prefix}/agribot_local_planner_plugin.xml"/>
  </export>
</package>
